[jupyter] Notes on how the data has been stored.

--- a/_generate_plots/Paper - Exploration real world.ipynb
+++ b/_generate_plots/Paper - Exploration real world.ipynb
@@ -768,6 +768,8 @@
     "        1. `git clone git@github.com:margaridaCF/laser_to_free_points_cloud.git`\n",
     "        1. `cd laser_to_free_points_cloud/`\n",
     "        1. `git checkout free_cloud `\n",
+    "        1. `cd ../eigen_catkin`\n",
+    "        1. `git clone https://github.com/ethz-asl/eigen_catkin.git`\n",
     "    1. Clone Firmware folder\n",
     "        1. `git clone https://github.com/PX4/Firmware.git`\n",
     "        1. `cd Firmware/`\n",
@@ -1336,11 +1338,11 @@
     "        1. `sudo apt-key adv --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-key 421C365BD9FF1F717815A3895523BAEEB01FA116`\n",
     "        1. `wget http://packages.ros.org/ros.key -O - | sudo apt-key add - `\n",
     "        1. `sudo apt-get update `\n",
-    "        1. `sudo apt-get install -y python-catkin-tools gdb ros-kinetic-octomap ros-kinetic-octomap-msgs ros-kinetic-octomap-server ros-kinetic-octomap-ros ros-kinetic-pcl-conversions ros-kinetic-pcl-ros geographiclib-tools rosbash ros-kinetic-rviz ros-kinetic-velodyne-simulator ros-kinetic-rqt-robot-plugins python-rospkg libqt4-dev ros-kinetic-geometry2 ros-kinetic-robot-state-publisher ros-kinetic-joint-state-publisher ros-kinetic-message-to-tf ros-kinetic-depthimage-to-laserscan ros-kinetic-tf2-kdl ros-kinetic-tf2-geometry-msgs ros-kinetic-pointcloud-to-laserscan ros-kinetic-nav-msgs git ros-kinetic-mavros-msgs ros-kinectic-urg-node-msgs ros-kinetic-node-manager-fkie ros-kinetic-multimaster-fkie ros-kinetic-cmake-modules exfat-fuse exfat-utils ros-kinetic-laser-filters`\n",
-    "1. **Upboard **\n",
+    "        1. `sudo apt-get install -y python-catkin-tools gdb ros-kinetic-octomap ros-kinetic-octomap-msgs ros-kinetic-octomap-server ros-kinetic-octomap-ros ros-kinetic-pcl-conversions ros-kinetic-pcl-ros geographiclib-tools rosbash ros-kinetic-rviz ros-kinetic-velodyne-simulator ros-kinetic-rqt-robot-plugins python-rospkg libqt4-dev ros-kinetic-geometry2 ros-kinetic-robot-state-publisher ros-kinetic-joint-state-publisher ros-kinetic-message-to-tf ros-kinetic-depthimage-to-laserscan ros-kinetic-tf2-kdl ros-kinetic-tf2-geometry-msgs ros-kinetic-pointcloud-to-laserscan ros-kinetic-nav-msgs git ros-kinetic-mavros-msgs ros-kinectic-urg-node-msgs ros-kinetic-node-manager-fkie ros-kinetic-multimaster-fkie ros-kinetic-cmake-modules exfat-fuse exfat-utils ros-kinetic-laser-filters libeigen2-dev`\n",
+    "1. **Upboard**\n",
     "    1. Auto login\n",
     "    1. Add at the top of bashrc source /opt/ros/kinetic/setup.bash and source ~/.bashrc\n",
-    "1. **Ground station **\n",
+    "1. **Ground station**\n",
     "    1. `pip install catkin_pkg`\n",
     "    1. `pip uninstall em`\n",
     "    1. `pip install empy`\n",
@@ -1432,7 +1434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Network @ CATEC to UAV **\n",
+    "**Network @ CATEC to UAV**\n",
     "- Laptop through wired network.\n",
     "- 192.168.6.232 through wired network. (Rocket 2)\n",
     "- 192.168.6.231 through wireless to 192.168.6.232 (Rocket 1)\n",
@@ -1443,7 +1445,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Run **\n",
+    "**Run**\n",
     "1. Simulation\n",
     "    1. `docker start garuda_pixhawk`\n",
     "    1. `xhost +`\n",
