--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -26,8 +26,11 @@
     "    1. [Study variables](#studyVariables)\n",
     "    \n",
     "1. [**Experimental Results**](#ExperimentalResults)\n",
-    "    1. [Open questions](#OpenQuestions)\n",
-    "    1. [Deterministic](#Deterministic)"
+    "    1. [Filter questions](#OpenQuestions)\n",
+    "    1. [Result Sets](#ResultSets)\n",
+    "    1. [Deterministic](#Deterministic)\n",
+    "    1. [Path lenght variability](#Path_lenght_variability)\n",
+    "    1. [Obstacle avoidance run time](#Obstacle_avoidance_run_time)"
    ]
   },
   {
@@ -327,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Extract data**\n",
+    "**Extract data - real flight**\n",
     "\n",
     "Deliverables:\n",
     "- Octree\n",
@@ -340,6 +343,20 @@
     "3. run `roslaunch architecture hitl_laptop_saveOctomap.launch` with reply of filtered bag, saving octree at identified points `rosrun octomap_server octomap_saver  file_name.bt`\n",
     "4. run __ to verify output with filtered octree. Find valid path.\n",
     "5. Add octree + start&goal as a test."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Extract data - unit tests**\n",
+    "Deliverables:\n",
+    "- Measurements in .csv file\n",
+    "\n",
+    "Method:\n",
+    "- At upboard take care the path for csv is correct in both ortho and sparse (file system and remove current).\n",
+    "- Comment out macro ROS_RUNNING\n",
+    "- `catkin run_tests -j1 path_planning`"
    ]
   },
   {
@@ -406,7 +423,8 @@
     "- ~~Failure percentage~~\n",
     "    - ~~Naive max resolution neighbors~~\n",
     "    - ~~Different fractions of security margin~~\n",
-    "- Diffence in margin size on the path\n"
+    "- Diffence in margin size on the path\n",
+    "- Computation time of just obstacle avoidance 3 loops vs geometric\n"
    ]
   },
   {
@@ -588,9 +606,15 @@
     "- start\n",
     "- goal\n",
     "- margin\n",
+    "\n",
     "The output is always the same.\n",
     "The average time in hitl is x standard deviation y\n",
-    "The average time is live is w standard deviation z"
+    "The average time is live is w standard deviation z\n",
+    "\n",
+    "Data Collection:\n",
+    "- Unit tests collect_resuts_ortho.cpp (run 20) & collect_resuts.cpp (run 1)\n",
+    "- csv @ /media/mfaria/Ganesha/20171219_backup_home_catec/Margarida/20180829_paper/data/20180907_ltstarOrtho/\n",
+    "- commit 701e3dfcd1fd30ae29979d03b032ff1eccdf90e9 @ 20180827_measurements - sparse_deterministic_measurements tag"
    ]
   },
   {
@@ -653,6 +677,66 @@
     "- Switch start and end points.\n",
     "- Keep start & end, change filter to non filter.\n",
     "- Start & end points with similar obstacles."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Obstacle_avoidance_run_time'></a>\n",
+    "###### Obstacle avoidance run time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Unit test with \n",
+    "- different octrees. All from experimental. (2 raw, 2 filtered)\n",
+    "- Distance (far vs close) (47 vs 10)\n",
+    "- Margin (big vs small) (8 vs 2)\n",
+    "\n",
+    "For plot merge in box plot the results for both octree. Time versus distance. See what influences more, margin or distance.\n",
+    "\n",
+    "For unit tests:\n",
+    "- One unit test per octree. (4)\n",
+    "- One method called in each unit tests that makes the 4 combinations (distance and margin).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total tests 196.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "print \"Total tests \" + str( math.pow(14, 2) ) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='Lazy_Theta_Star_sparse_vs_ortho'></a>\n",
+    "###### Lazy Theta Star sparse neighbors vs + geometric obstacle avoidance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Unit tests collect_resuts_ortho.cpp (run 20) & collect_resuts.cpp (run 1)\n",
+    "- csv @ /media/mfaria/Ganesha/20171219_backup_home_catec/Margarida/20180829_paper/data/20180907_ltstarOrtho/\n",
+    "- commit 701e3dfcd1fd30ae29979d03b032ff1eccdf90e9 @ 20180827_measurements - ortho_time_measurement tag"
    ]
   },
   {
