[plotly] Plots to compare lazy theta star performance with and without geometric obstacles.

--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -619,37 +619,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/requests/__init__.py:83: RequestsDependencyWarning: Old version of cryptography ([1, 2, 3]) may cause slowdown.\n",
+      "  warnings.warn(warning, RequestsDependencyWarning)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Analysis of time in millis by lenght of output path in meters. buckets by 10 m\n",
-      " = 20.0 = \n",
-      "Amount of data points 10\n",
-      "Standard deviation: 3634.78326727\n",
-      "Mean: 3957.0\n",
-      "Percentage: 35.684108259\n",
-      "Span: 10186 millis\n",
+      "==== Sparse Only ====\n",
+      "Analysis of time in millis by lenght of straight line path in meters. buckets by 10 m\n",
+      " = 10.0 = \n",
+      "Amount of data points 809\n",
+      "Standard deviation: 15084.628656\n",
+      "Mean: 20722.5339926\n",
+      "Percentage: 30.6007275708\n",
+      "Span: 49295 millis\n",
+      " = 40.0 = \n",
+      "Amount of data points 202\n",
+      "Standard deviation: 35776.5102239\n",
+      "Mean: 80077.039604\n",
+      "Percentage: 49.9197832002\n",
+      "Span: 71668 millis\n",
       " = 30.0 = \n",
-      "Amount of data points 6\n",
-      "Standard deviation: 1794.37841296\n",
-      "Mean: 4688.33333333\n",
-      "Percentage: 44.837041803\n",
-      "Span: 4002 millis\n",
-      " = 50.0 = \n",
-      "Amount of data points 8\n",
-      "Standard deviation: 6863.0947454\n",
-      "Mean: 14320.625\n",
-      "Percentage: 36.6618309049\n",
-      "Span: 18720 millis\n"
+      "Amount of data points 202\n",
+      "Standard deviation: 10790.5779366\n",
+      "Mean: 55420.8910891\n",
+      "Percentage: 49.8179960139\n",
+      "Span: 21660 millis\n"
      ]
     }
    ],
    "source": [
-    "exec(open(\"python/20180830_deterministic.py\").read())"
+    "import deterministic as d\n",
+    "\n",
+    "print \"==== Sparse Only ====\" \n",
+    "\n",
+    "lazyThetaStar_filename = \"/media/mfaria/Ganesha/20171219_backup_home_catec/Margarida/20180829_paper/data/20180904_unitTests_100_sparse/lazyThetaStar_computation_time.csv\"\n",
+    "d.calculate_time_variability_from_file(lazyThetaStar_filename)\n"
    ]
   },
   {
@@ -705,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -741,10 +755,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "==== Orthogonal Only ====\n",
+      "Analysis of time in millis by lenght of straight line path in meters. buckets by 10 m\n",
+      " = 10.0 = \n",
+      "Amount of data points 168\n",
+      "Standard deviation: 2560.96095633\n",
+      "Mean: 2332.83333333\n",
+      "Percentage: 34.2374459402\n",
+      "Span: 7480 millis\n",
+      " = 40.0 = \n",
+      "Amount of data points 42\n",
+      "Standard deviation: 12469.0548775\n",
+      "Mean: 39493.2857143\n",
+      "Percentage: 49.6024141836\n",
+      "Span: 25138 millis\n",
+      " = 30.0 = \n",
+      "Amount of data points 42\n",
+      "Standard deviation: 30395.5256797\n",
+      "Mean: 35047.1190476\n",
+      "Percentage: 49.8974418538\n",
+      "Span: 60916 millis\n"
+     ]
+    }
+   ],
+   "source": [
+    "import deterministic as d\n",
+    "\n",
+    "print \"==== Orthogonal Only ====\"\n",
+    "\n",
+    "lazyThetaStar_filename = \"/media/mfaria/Ganesha/20171219_backup_home_catec/Margarida/20180829_paper/data/20180907_ltstarOrtho/lazyThetaStar_computation_time_ortho.csv\"\n",
+    "d.calculate_time_variability_from_file(lazyThetaStar_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import deterministic as d\n",
+    "\n",
+    "lazyThetaStar_filenameB = \"/media/mfaria/Ganesha/20171219_backup_home_catec/Margarida/20180829_paper/data/20180907_ltstarOrtho/lazyThetaStar_computation_time_ortho.csv\"\n",
+    "lazyThetaStar_filenameA = \"/media/mfaria/Ganesha/20171219_backup_home_catec/Margarida/20180829_paper/data/20180904_unitTests_100_sparse/lazyThetaStar_computation_time.csv\"\n",
+    "d.scatter_time_finalLength(lazyThetaStar_filenameA, lazyThetaStar_filenameB)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Need more datapoints for larger paths. At least 10 more.\n",
+    "Maybe a script that goes through all the points in the next to the road area to the next to the tires area? In resolution of 2 meters. And does combinations between each set."
+   ]
   }
  ],
  "metadata": {
