[jupyter] Call polynomial fit from jupyter.

--- a/_generate_plots/Paper - Lazy Theta Star Online.ipynb
+++ b/_generate_plots/Paper - Lazy Theta Star Online.ipynb
@@ -816,6 +816,86 @@
     "Need more datapoints for larger paths. At least 10 more.\n",
     "Maybe a script that goes through all the points in the next to the road area to the next to the tires area? In resolution of 2 meters. And does combinations between each set."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import deterministic as d\n",
+    "\n",
+    "csv_filepathOrtho = \"/home/mfaria/Flying_Octomap_code/src/data/lazyThetaStar_obstacle_avoidance_computation_time_margin_8_ortho.csv\"\n",
+    "csv_filepathSparse = \"/home/mfaria/Flying_Octomap_code/src/data/lazyThetaStar_obstacle_avoidance_computation_time_margin_8.csv\"\n",
+    "\n",
+    "d.scatter_time_finalLength(csv_filepathSparse, csv_filepathOrtho)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/requests/__init__.py:83: RequestsDependencyWarning: Old version of cryptography ([1, 2, 3]) may cause slowdown.\n",
+      "  warnings.warn(warning, RequestsDependencyWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python2.7/dist-packages/plotly/graph_objs/_deprecations.py:426: DeprecationWarning:\n",
+      "\n",
+      "plotly.graph_objs.Marker is deprecated.\n",
+      "Please replace it with one of the following more specific types\n",
+      "  - plotly.graph_objs.scatter.Marker\n",
+      "  - plotly.graph_objs.histogram.selected.Marker\n",
+      "  - etc.\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import deterministic as d\n",
+    "\n",
+    "csv_filepathOrtho = \"/home/mfaria/Flying_Octomap_code/src/data/lazyThetaStar_obstacle_avoidance_computation_time_margin_8_ortho.csv\"\n",
+    "csv_filepathSparse = \"/home/mfaria/Flying_Octomap_code/src/data/lazyThetaStar_obstacle_avoidance_computation_time_margin_8.csv\"\n",
+    "dataSparse = d.extract_lazy_theta_star_data(csv_filepathSparse)\n",
+    "dataOrtho = d.extract_lazy_theta_star_data(csv_filepathOrtho)\n",
+    "\n",
+    "#print(dataSparse.head(5))\n",
+    "\n",
+    "x_original = dataSparse['path_lenght_total_meters']\n",
+    "print x_original[len(x_original)-1]\n",
+    "\n",
+    "d.plot_polynomialFit_scatter(dataSparse, dataOrtho)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
