[plotly] Final graphs for Lazy Theta * online.

--- a/_generate_plots/Paper - Exploration real world.ipynb
+++ b/_generate_plots/Paper - Exploration real world.ipynb
@@ -1205,6 +1205,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "GPS position frame\n",
+    "\n",
+    "EKF2_GPS_POS_X (FLOAT)\t\n",
+    "X position of GPS antenna in body frame\n",
+    "EKF2_GPS_POS_Y (FLOAT)\t\n",
+    "Y position of GPS antenna in body frame\n",
+    "EKF2_GPS_POS_Z (FLOAT)\t\n",
+    "Z position of GPS antenna in body frame\n",
+    "205\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<a id='try1_asl'></a>\n",
     "##### Try 1 - Used from ETHz ASL\n",
     "1. Verify minimum range that is usable for Hokuyo. Both because of specs and if any part of the quad is obstructing the laser rays.\n",
