[architecture] Running exploration with oppairs.

--- a/_generate_plots/Exploration - Take 2.ipynb
+++ b/_generate_plots/Exploration - Take 2.ipynb
@@ -35,6 +35,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### SitL\n",
+    "<a id='HitL'></a>\n",
+    "\n",
+    "**Laptop** Setup basics for px4 simulation\n",
+    "1. Set paths\n",
+    "    1. `source /usr/share/gazebo/setup.sh `\n",
+    "    1. `cd ~/src/Firmware`\n",
+    "    1. `source /opt/ros/kinetic/setup.bash`\n",
+    "    1. `source ~/Flying_Octomap_code/devel/setup.bash`\n",
+    "    1. `source ~/src/Firmware/Tools/setup_gazebo.bash ~/src/Firmware ~/src/Firmware/build/posix_sitl_default`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware`\n",
+    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware/Tools/sitl_gazebo`\n",
+    "1. Reset files (if needed)\n",
+    "    1. `cp ~/Flying_Octomap_code/src/architecture/Tools/iris.xacro ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "    1. `cp ~/Flying_Octomap_code/src/architecture/Tools/iris_base.xacro ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/`\n",
+    "    1. `python ~/src/Firmware/Tools/sitl_gazebo/scripts/xacro.py -o ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.xacro enable_mavlink_interface:=true enable_ground_truth:=false enable_wind:=false enable_logging:=false rotors_description_dir:=/home/mfaria/src/Firmware/Tools/sitl_gazebo/models/rotors_description`\n",
+    "    1. `sed -i 's/package:\\/\\/rotors_description/package:\\/\\/mavlink_sitl_gazebo\\/models\\/rotors_description/g' ~/src/Firmware/Tools/sitl_gazebo/models/rotors_description/urdf/iris_base.urdf`\n",
+    "1. Launch\n",
+    "    1. `roslaunch architecture hitl_laptop_px4_simulation.launch`\n",
+    "    1. `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"`  \n",
+    "        \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### HitL\n",
     "<a id='HitL'></a>\n",
     "\n",
