[architecture] Instructions to validate hitl for ual + last lazy theta star.

--- a/_generate_plots/Lazy Theta Real-Time Tor del Águila.ipynb
+++ b/_generate_plots/Lazy Theta Real-Time Tor del Águila.ipynb
@@ -44,6 +44,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HITL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. @Upboard `roscore`\n",
+    "1. @Laptop `roslaunch architecture hitl_laptop_px4_simulation.launch`\n",
+    "1. @Upbpard `roslaunch architecture hitl_upboard_path_command.launch`\n",
+    "1. ` rostopic pub /ltstar_request zy_theta_star_msgs/LTStarRequest \"header:\n",
+    "  seq: 0\n",
+    "  stamp: {secs: 0, nsecs: 0}\n",
+    "  frame_id: ''\n",
+    "request_id: 0\n",
+    "start: {x: 0.0, y: 0.0, z: 2.0}\n",
+    "goal: {x: 0.0, y: 0.0, z: 10.0}\n",
+    "max_time_secs: 60\n",
+    "safety_margin: 2.0\" \n",
+    "`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -67,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
