[jupyter] Notebooks to run hitl and to see volume explored.

--- a/_generate_plots/Exploration/Exploration.ipynb
+++ b/_generate_plots/Exploration/Exploration.ipynb
@@ -67,23 +67,13 @@
     "1. **UpBoard** Launch code\n",
     "    1. `source ~/Flying_Octomap_code/devel/setup.bash`\n",
     "    1. `export ROS_IP=10.0.250.73`\n",
-    "    1. `roslaunch architecture hitl_upboard_architecture.launch`\n",
+    "    1. `roscore`\n",
     "\n",
     "1. **Laptop** Launch px4 simulation (2 terminals)\n",
-    "    1. `cd ~/src/Firmware`\n",
-    "    1. `roslaunch architecture hitl_laptop_px4_simulation.launch`\n",
-    "    1. `roslaunch mavros px4.launch fcu_url:=\"udp://:14540@127.0.0.1:14557\"`  \n",
+    "    1. `roslaunch architecture px4_ual_powerPlant.launch` \n",
     "\n",
-    "1. **Laptop** Launch rviz\n",
-    "    1. `cd ~/src/Firmware`\n",
-    "    1. `source /opt/ros/kinetic/setup.bash`\n",
-    "    1. `source ~/Flying_Octomap_code/devel/setup.bash`\n",
-    "    1. `source Tools/setup_gazebo.bash ~/src/Firmware ~/src/Firmware/build/posix_sitl_default`\n",
-    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware`\n",
-    "    1. `export ROS_PACKAGE_PATH=$ROS_PACKAGE_PATH:~/src/Firmware/Tools/sitl_gazebo` \n",
-    "    1. `export ROS_IP=192.168.6.77`\n",
-    "    1. `export ROS_MASTER_URI=http://192.168.6.231:11311`\n",
-    "    1. `rviz`\n",
+    "1. **Upboard** Launch rviz\n",
+    "    1. `roslaunch architecture hitl_upboard_powerPlant.launch`\n",
     "        \n",
     "    \n"
    ]
