[python] sitl instructions.

--- a/_generate_plots/Exploration/Exploration.ipynb
+++ b/_generate_plots/Exploration/Exploration.ipynb
@@ -55,6 +55,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "###### Software in the Loop (SitL)\n",
+    "\n",
+    "\n",
+    "         \n",
+    "\n",
+    "1. `source ~/Flying_Octomap_code/devel/setup.bash`\n",
+    "1. `roslaunch architecture px4_ual_powerPlant.launch`\n",
+    "1. `roslaunch architecture sitl_powerPlant.launch`\n",
+    "         "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "###### Hardware in the Loop (HitL)\n",
     "         \n",
     "         \n",
