[plotly] Pie char for execution time by component.

--- a/_generate_plots/Exploration/Execution time - all samples.ipynb
+++ b/_generate_plots/Exploration/Execution time - all samples.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -85,6 +85,149 @@
     "\n",
     "print \"The median exploration time is {} bounded by {} and {}\".format(minutes_per_view.median()[0],  minutes_per_view.min()[0],  minutes_per_view.max()[0])\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "df = pd.read_csv(files[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "timeline                     45401609.0\n",
+       "visit_waypoints_millis         709792.0\n",
+       "global_exploration_millis     3367696.0\n",
+       "local_exploration_millis       114873.0\n",
+       "ltstar_millis                  213682.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for f in files:\n",
+    "    all_together_now = pd.DataFrame(pd.read_csv(f).sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_files = pd.DataFrame(pd.DataFrame(pd.read_csv(f).sum())[0] for f in files)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "hole": 0.4,
+         "labels": [
+          "Visit waypoints",
+          "Global Exploration",
+          "Local Exploration",
+          "Path Planner"
+         ],
+         "marker": {
+          "colors": [
+           "#9467bd",
+           "#ff800e",
+           "#ffd6b2",
+           "#2ca02c"
+          ],
+          "line": {
+           "color": "#ffffff",
+           "width": 2
+          }
+         },
+         "textfont": {
+          "color": "#1f77b4"
+         },
+         "type": "pie",
+         "uid": "78826bea-c120-11e9-bcb6-ace2d3611e0a",
+         "values": [
+          4855906,
+          19353633,
+          850618,
+          3031710
+         ]
+        }
+       ],
+       "layout": {
+        "font": {
+         "family": "Courier New, monospace",
+         "size": 18
+        },
+        "title": "Execution time by task over all runs",
+        "titlefont": {
+         "family": "Courier New, monospace",
+         "size": 24
+        }
+       }
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "labels = ['Visit waypoints','Global Exploration','Local Exploration','Path Planner']\n",
+    "values = [all_files.visit_waypoints_millis.sum(), all_files.global_exploration_millis.sum(), all_files.local_exploration_millis.sum(), all_files.ltstar_millis.sum()]\n",
+    "colors = ['#9467bd', '#ff800e', '#ffd6b2', '#2ca02c']\n",
+    "trace = go.Pie(\n",
+    "    labels=labels, \n",
+    "    values=values,\n",
+    "    hole=0.4,\n",
+    "    textfont=dict(color='#1f77b4'),\n",
+    "    marker=dict(colors=colors, \n",
+    "                       line=dict(color='#ffffff', width=2)))\n",
+    "\n",
+    "layout = go.Layout(\n",
+    "        font=dict(\n",
+    "            family='Courier New, monospace',\n",
+    "            size=18\n",
+    "        ),\n",
+    "        title=\"Execution time by task over all runs\",\n",
+    "        titlefont=dict(\n",
+    "            family='Courier New, monospace',\n",
+    "            size=24,\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "fig=dict(data=[trace], layout=layout)\n",
+    "\n",
+    "plotly.offline.iplot(fig)\n",
+    "pio.write_image(fig, '/media/mfaria/Ganesha/20171219_backup_home_catec/Margarida/20190100_exploration/sim_data/valid/execTime_pie.pdf', scale=2)\n"
    ]
   },
   {
