[plotly] Exploration graphs.

--- a/_generate_plots/Exploration/Execution time - all samples.ipynb
+++ b/_generate_plots/Exploration/Execution time - all samples.ipynb
@@ -9,6 +9,7 @@
     "import plotly\n",
     "import pandas as pd\n",
     "import plotly.io as pio\n",
+    "import plotly.graph_objs as go\n",
     "\n",
     "def calculateMinutesPerView(file_path):\n",
     "    df = pd.read_csv(file_path)\n",
@@ -38,8 +39,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The average minutes per view is 6.63509721024 +- 1.93226066538\n",
-      "The median exploration time is 5.99804136364 bounded by 5.31382361111 and 10.4718935897\n"
+      "The average minutes per view is 6.30830497946 +- 1.66766669174\n",
+      "The median exploration time is 6.092695338 bounded by 4.02846282051 and 10.4718935897\n"
      ]
     }
    ],
@@ -71,8 +72,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The average is 78.0329638889 +- 29.6913503394\n",
-      "The median exploration time is 67.7332916667 bounded by 59.43235 and 137.7352\n"
+      "The average is 78.9050816667 +- 25.0492628626\n",
+      "The median exploration time is 71.7725833333 bounded by 53.9287666667 and 137.7352\n"
      ]
     }
    ],
@@ -93,57 +94,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "df = pd.read_csv(files[0])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "timeline                     45401609.0\n",
-       "visit_waypoints_millis         709792.0\n",
-       "global_exploration_millis     3367696.0\n",
-       "local_exploration_millis       114873.0\n",
-       "ltstar_millis                  213682.0\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for f in files:\n",
-    "    all_together_now = pd.DataFrame(pd.read_csv(f).sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "all_files = pd.DataFrame(pd.DataFrame(pd.read_csv(f).sum())[0] for f in files)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,12 +130,12 @@
           "color": "#1f77b4"
          },
          "type": "pie",
-         "uid": "78826bea-c120-11e9-bcb6-ace2d3611e0a",
+         "uid": "16ff40dc-c1b6-11e9-b465-ace2d3611e0a",
          "values": [
-          4855906,
-          19353633,
-          850618,
-          3031710
+          8563028,
+          32457986,
+          1921659,
+          4400376
          ]
         }
        ],
