[plotly] Find why exploration is slow.

--- a/_generate_plots/Exploration/Occupied Volume - all samples.ipynb
+++ b/_generate_plots/Exploration/Occupied Volume - all samples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,6 +14,7 @@
     "import volume as vol\n",
     "\n",
     "folder_path = \"/media/mfaria/Ganesha/20171219_backup_home_catec/Margarida/20190100_exploration/sim_data/valid\"\n",
+    "#folder_path = \"/home/mfaria/Flying_Octomap_code/src/data\"\n",
     "files = []\n",
     "# r=root, d=directories, f = files\n",
     "for r, d, f in os.walk(folder_path):\n",
@@ -50,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +105,7 @@
          "mode": "lines",
          "name": "Run 1",
          "type": "scatter",
-         "uid": "92d39b2e-c29f-11e9-b018-ace2d3611e0a",
+         "uid": "6b91ab4e-c413-11e9-b018-ace2d3611e0a",
          "x": [
           0.0014833333333333332,
           0.0513,
@@ -652,7 +653,7 @@
          "mode": "lines",
          "name": "Run 2",
          "type": "scatter",
-         "uid": "92d39b2f-c29f-11e9-b018-ace2d3611e0a",
+         "uid": "6b91ab4f-c413-11e9-b018-ace2d3611e0a",
          "x": [
           0.0019,
           0.05306666666666667,
@@ -1162,7 +1163,7 @@
          "mode": "lines",
          "name": "Run 3",
          "type": "scatter",
-         "uid": "92d39b30-c29f-11e9-b018-ace2d3611e0a",
+         "uid": "6b91ab50-c413-11e9-b018-ace2d3611e0a",
          "x": [
           0.00145,
           0.051866666666666665,
@@ -1714,7 +1715,7 @@
          "mode": "lines",
          "name": "Run 4",
          "type": "scatter",
-         "uid": "92d39b31-c29f-11e9-b018-ace2d3611e0a",
+         "uid": "6b91ab51-c413-11e9-b018-ace2d3611e0a",
          "x": [
           0.0014,
           0.051666666666666666,
@@ -2610,7 +2611,7 @@
          "mode": "lines",
          "name": "Run 5",
          "type": "scatter",
-         "uid": "92d39b32-c29f-11e9-b018-ace2d3611e0a",
+         "uid": "6b91ab52-c413-11e9-b018-ace2d3611e0a",
          "x": [
           0.0016166666666666666,
           0.054566666666666666,
@@ -3150,7 +3151,7 @@
          "mode": "lines",
          "name": "Run 6",
          "type": "scatter",
-         "uid": "92d39b33-c29f-11e9-b018-ace2d3611e0a",
+         "uid": "6b91ab53-c413-11e9-b018-ace2d3611e0a",
          "x": [
           0.0014333333333333331,
           0.04711666666666667,
@@ -3742,7 +3743,7 @@
          "mode": "lines",
          "name": "Run 7",
          "type": "scatter",
-         "uid": "92d39b34-c29f-11e9-b018-ace2d3611e0a",
+         "uid": "6b91ab54-c413-11e9-b018-ace2d3611e0a",
          "x": [
           0.0016,
           0.05785,
@@ -4492,7 +4493,7 @@
          "mode": "lines",
          "name": "Run 8",
          "type": "scatter",
-         "uid": "92d39b35-c29f-11e9-b018-ace2d3611e0a",
+         "uid": "6b91ab55-c413-11e9-b018-ace2d3611e0a",
          "x": [
           0.00155,
           0.053366666666666666,
@@ -5146,7 +5147,7 @@
          "mode": "lines",
          "name": "Run 9",
          "type": "scatter",
-         "uid": "92d39b36-c29f-11e9-b018-ace2d3611e0a",
+         "uid": "6b91ab56-c413-11e9-b018-ace2d3611e0a",
          "x": [
           0.0019500000000000001,
           0.052000000000000005,
@@ -5610,7 +5611,7 @@
          "mode": "lines",
          "name": "Run 10",
          "type": "scatter",
-         "uid": "92d39b37-c29f-11e9-b018-ace2d3611e0a",
+         "uid": "6b91ab57-c413-11e9-b018-ace2d3611e0a",
          "x": [
           0.002116666666666667,
           0.06939999999999999,
@@ -6198,7 +6199,7 @@
          "mode": "lines",
          "name": "Maximum explored volume",
          "type": "scatter",
-         "uid": "92d39b38-c29f-11e9-b018-ace2d3611e0a",
+         "uid": "6b91ab58-c413-11e9-b018-ace2d3611e0a",
          "x": [
           0,
           138
@@ -6244,7 +6245,7 @@
        "'file:///home/mfaria/Flying_Octomap_code/src/_generate_plots/Exploration/volume_exploration_vs_time.html'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6266,26 +6267,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Explored 92.9320082546 percent of the explorable volume.\n",
-      "Explored 100.0 percent of the explorable volume.\n",
-      "Explored 91.8200825459 percent of the explorable volume.\n",
-      "Explored 97.6159443901 percent of the explorable volume.\n",
-      "Explored 88.8590203106 percent of the explorable volume.\n",
-      "Explored 93.1275116759 percent of the explorable volume.\n",
-      "Explored 94.7818236125 percent of the explorable volume.\n",
-      "Explored 91.7861409797 percent of the explorable volume.\n",
-      "Explored 94.2299337461 percent of the explorable volume.\n",
-      "Explored 94.8924731183 percent of the explorable volume.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def percentExplored(file_path):\n",
     "    df = pd.read_csv(file_path)\n",
@@ -6297,18 +6281,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The average is 94.0044938634 +- 3.13617254555\n",
-      "The median is 93.678722711 bounded by 88.8590203106 and 100.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def statistics(df):\n",
     "    print \"The average is {} +- {}\".format(df.mean()[0], df.std()[0])\n",
@@ -6318,7 +6293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6333,20 +6308,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'file:///home/mfaria/Flying_Octomap_code/src/_generate_plots/Exploration/occupied_vs_time.html'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
