--- a/_generate_plots/Exploration/Execution time - all samples.ipynb
+++ b/_generate_plots/Exploration/Execution time - all samples.ipynb
@@ -22,6 +22,7 @@
     "\n",
     "import os\n",
     "folder_path = \"/media/mfaria/Ganesha/20171219_backup_home_catec/Margarida/20190100_exploration/sim_data/valid\"\n",
+    "folder_path = \"/home/mfaria/Flying_Octomap_code/src/data/current\"\n",
     "files = []\n",
     "# r=root, d=directories, f = files\n",
     "for r, d, f in os.walk(folder_path):\n",
@@ -39,8 +40,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The average minutes per view is 6.30830497946 +- 1.66766669174\n",
-      "The median exploration time is 6.092695338 bounded by 4.02846282051 and 10.4718935897\n"
+      "The average minutes per view is 1.50018695652 +- nan\n",
+      "The median exploration time is 1.50018695652 bounded by 1.50018695652 and 1.50018695652\n"
      ]
     }
    ],
@@ -72,8 +73,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The average is 78.9050816667 +- 25.0492628626\n",
-      "The median exploration time is 71.7725833333 bounded by 53.9287666667 and 137.7352\n"
+      "The average is 34.5043 +- nan\n",
+      "The median exploration time is 34.5043 bounded by 34.5043 and 34.5043\n"
      ]
     }
    ],
@@ -130,12 +131,12 @@
           "color": "#1f77b4"
          },
          "type": "pie",
-         "uid": "16ff40dc-c1b6-11e9-b465-ace2d3611e0a",
+         "uid": "a950b03c-c815-11e9-8355-ace2d3611e0a",
          "values": [
-          8563028,
-          32457986,
-          1921659,
-          4400376
+          1538961,
+          164436,
+          25670,
+          341191
          ]
         }
        ],
@@ -183,7 +184,8 @@
     "fig=dict(data=[trace], layout=layout)\n",
     "\n",
     "plotly.offline.iplot(fig)\n",
-    "pio.write_image(fig, '/media/mfaria/Ganesha/20171219_backup_home_catec/Margarida/20190100_exploration/sim_data/valid/execTime_pie.pdf', scale=2)\n"
+    "#pio.write_image(fig, '/media/mfaria/Ganesha/20171219_backup_home_catec/Margarida/20190100_exploration/sim_data/valid/execTime_pie.pdf', scale=2)\n",
+    "pio.write_image(fig, '/home/mfaria/Flying_Octomap_code/src/data/current/execTime_pie.pdf', scale=2)\n"
    ]
   },
   {
